codex-rs/tui/src/status/snapshots/codex_tui__status__tests__status_snapshot_includes_monthly_limit.snap
---
source: tui/src/status/tests.rs
assertion_line: 354
expression: sanitized
---
/status

╭────────────────────────────────────────────────────────────────────────────╮
│  >_ Codey (v0.0.0)                                                         │
│                                                                            │
│ Visit https://chatgpt.com/codex/settings/usage for up-to-date              │
│ information on rate limits and credits                                     │
│                                                                            │
│  Model:            gpt-5.1-codex-max (reasoning none, summaries auto)      │
│  Directory: [[workspace]]                                                  │
│  Approval:         on-request                                              │
│  Sandbox:          read-only                                               │
│  Agents.md:        <none>                                                  │
│  Account:          user@example.com (Unknown)                              │
│                                                                            │
│  Context window:   99% left (1.2K used / 272K)                             │
│  Monthly limit:    [██████████████████░░] 88% left (resets 07:08 on 7 May) │
╰────────────────────────────────────────────────────────────────────────────╯
